don't use macros for icmc

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -39,7 +39,7 @@
 		  Peter Hanappe},
   title		= {An object oriented visual environment for musical
 		  composition},
-  booktitle	= proc # " 1997 "  # icmc,
+  booktitle	= {Proceedings of the 1997 International Computer Music Conference},
   publisher	= cma,
   location	= {San Francisco},
   year		= 1997,
@@ -88,7 +88,7 @@
 @InProceedings{	  bilmes92:model,
   author	= {Jeff Bilmes},
   title		= {A model for musical rhythm},
-  booktitle	= proc # " 1992 "  # icmc,
+  booktitle	= {Proceedings of the 1992 International Computer Music Conference},
   pages		= {207--210},
   publisher	= cma,
   location	= {San Francisco},
@@ -110,7 +110,7 @@
   author	= {Stephen Brandon and Leigh M. Smith},
   title		= {Next steps from NeXTSTEP: music kit and sound kit in a new
 		  world},
-  booktitle	= proc # " 2000 "  # icmc,
+  booktitle	= {Proceedings of the 2000 International Computer Music Conference},
   pages		= {503--506},
   year		= 2000,
   address	= {San Francisco},
@@ -123,7 +123,7 @@
   author	= {Eli Brandt},
   title		= {Temporal type constructors for computer music
 		  programming},
-  booktitle	= proc # " 2000 "  # icmc,
+  booktitle	= {Proceedings of the 2000 International Computer Music Conference},
   pages		= {328--331},
   year		= 2000,
   address	= {San Francisco},
@@ -136,7 +136,7 @@
   author	= {Eli Brandt},
   title		= {Implementing temporal type constructors for music
 		  programming},
-  booktitle	= proc # " 2001 "  # icmc,
+  booktitle	= {Proceedings of the 2001 International Computer Music Conference},
   pages		= {99--102},
   year		= 2001,
   address	= {San Francisco},
@@ -158,7 +158,7 @@
 @InProceedings{	  brinkman81:data,
   author	= {Alexander R. Brinkman},
   title		= {Data structures for a music-11 preprocessor},
-  booktitle	= proc # " 1981 "  # icmc,
+  booktitle	= {Proceedings of the 1981 International Computer Music Conference},
   pages		= {178--95},
   year		= 1981,
   address	= {San Francisco},
@@ -170,7 +170,7 @@
 @InProceedings{	  brinkman84:data,
   author	= {Alexander R. Brinkman},
   title		= {A data structure for computer analysis of musical scores},
-  booktitle	= proc # " 1984 "  # icmc,
+  booktitle	= {Proceedings of the 1984 International Computer Music Conference},
   pages		= {233--242},
   year		= 1984,
   address	= {San Francisco},
@@ -333,7 +333,7 @@
   author	= {R. B. Dannenberg},
   title		= {A structure for representing, displaying and editing
 		  music},
-  booktitle	= proc # " 1986 "  # icmc,
+  booktitle	= {Proceedings of the 1986 International Computer Music Conference},
   pages		= {153--60},
   year		= 1986,
   address	= {San Francisco},
@@ -394,7 +394,7 @@
   author	= {R. B. Dannenberg},
   title		= {The implementation of nyquist, a sound synthesis
 		  language},
-  booktitle	= proc # " 1993 "  # icmc,
+  booktitle	= {Proceedings of the 1993 International Computer Music Conference},
   pages		= {168--171},
   year		= 1993,
   address	= {San Francisco},
@@ -418,7 +418,7 @@
 @InProceedings{	  dannenberg94:abstract,
   author	= {R. B. Dannenberg},
   title		= {Abstract time warping of compound events and signals},
-  booktitle	= proc # " 1994 "  # icmc,
+  booktitle	= {Proceedings of the 1994 International Computer Music Conference},
   pages		= {251--254},
   year		= 1994,
   address	= {San Francisco},
@@ -456,7 +456,7 @@
 @InProceedings{	  decker84:modular,
   author	= {Decker, S. and G. Kendall},
   title		= {A modular approach to sound synthesis software},
-  booktitle	= proc # " 1984 "  # icmc,
+  booktitle	= {Proceedings of the 1984 International Computer Music Conference},
   pages		= {243--250},
   year		= 1984,
   address	= {San Francisco},
@@ -565,7 +565,7 @@
 @InProceedings{	  deyer84:toward,
   author	= {Lounette M. Deyer},
   title		= {Toward a device independent representation of music},
-  booktitle	= proc # " 1984 "  # icmc,
+  booktitle	= {Proceedings of the 1984 International Computer Music Conference},
   pages		= {251--255},
   year		= 1984,
   address	= {San Francisco},
@@ -636,7 +636,7 @@
   author	= {Michael Gogins},
   title		= {Music graphs for algorithmic composition and synthesis
 		  with extensible implementation in java},
-  booktitle	= proc # " 1998 "  # icmc,
+  booktitle	= {Proceedings of the 1998 International Computer Music Conference},
   pages		= {369--376},
   year		= 1998,
   address	= {San Francisco},
@@ -763,7 +763,7 @@
   author	= {H. H. Hoos and K. A. Hamel and K. Renz, J. Kilian},
   title		= {The GUIDO music notation format---a novel approach for
 		  adequately representing score-level music},
-  booktitle	= proc # " 1998 "  # icmc,
+  booktitle	= {Proceedings of the 1998 International Computer Music Conference},
   pages		= {451--454},
   year		= 1998,
   address	= {San Francisco},
@@ -833,7 +833,7 @@
   author	= {David A. Jaffe},
   title		= {Musical and extra-musical applications of the NeXT music
 		  kit},
-  booktitle	= proc # " 1991 "  # icmc,
+  booktitle	= {Proceedings of the 1991 International Computer Music Conference},
   pages		= {521--524},
   year		= 1991,
   address	= {San Francisco},
@@ -846,7 +846,7 @@
   author	= {David A. Jaffe and Julius O. Smith},
   title		= {Real time sound processing and synthesis on multiple DSPs
 		  using the music kit and the ariel quintprocessor},
-  booktitle	= proc # " 1993 "  # icmc,
+  booktitle	= {Proceedings of the 1993 International Computer Music Conference},
   pages		= {464--467},
   year		= 1993,
   address	= {San Francisco},
@@ -880,7 +880,7 @@
   author	= {M. Laurson},
   title		= {PWCollider: a visual composition tool for software
 		  synthesis},
-  booktitle	= proc # " 1999 "  # icmc,
+  booktitle	= {Proceedings of the 1999 International Computer Music Conference},
   pages		= {20--23},
   year		= 1999,
   address	= {San Francisco},
@@ -966,7 +966,7 @@
 @InProceedings{	  mccartney96:supercollider,
   author	= {James McCartney},
   title		= {SuperCollider: a new real time synthesis language},
-  booktitle	= proc # " 1996 "  # icmc,
+  booktitle	= {Proceedings of the 1996 International Computer Music Conference},
   pages		= {257--258},
   year		= 1996,
   address	= {San Francisco},
@@ -1047,7 +1047,7 @@
   title		= {The need for essential improvements in the machine
 		  composer interface used for the composition of
 		  electroacoustic computer music},
-  booktitle	= proc # " 1986 "  # icmc,
+  booktitle	= {Proceedings of the 1986 International Computer Music Conference},
   pages		= {443-445},
   year		= 1986,
   address	= {San Francisco},
@@ -1059,7 +1059,7 @@
 @InProceedings{	  oppenheim87:pgg,
   author	= {Oppenheim, D.},
   title		= {The P-G-G environment for music composition},
-  booktitle	= proc # " 1987 "  # icmc,
+  booktitle	= {Proceedings of the 1987 International Computer Music Conference},
   pages		= {40--48},
   year		= 1987,
   address	= {San Francisco},
@@ -1071,7 +1071,7 @@
 @InProceedings{	  oppenheim89:dmix,
   author	= {Oppenheim, D.},
   title		= {DMIX: an environment for composition},
-  booktitle	= proc # " 1989 "  # icmc,
+  booktitle	= {Proceedings of the 1989 International Computer Music Conference},
   pages		= {226--233},
   year		= 1989,
   address	= {San Francisco},
@@ -1084,7 +1084,7 @@
   author	= {Oppenheim, D.},
   title		= {Quill: an interpreter for generating music objects within
 		  the DMIX environment},
-  booktitle	= proc # " 1990 "  # icmc,
+  booktitle	= {Proceedings of the 1990 International Computer Music Conference},
   pages		= {256--258},
   year		= 1990,
   address	= {San Francisco},
@@ -1097,7 +1097,7 @@
   author	= {Oppenheim, D.},
   title		= {SHADOW: an object-oriented performance-system for the DMIX
 		  environment},
-  booktitle	= proc # " 1991 "  # icmc,
+  booktitle	= {Proceedings of the 1991 International Computer Music Conference},
   pages		= {281--284},
   year		= 1991,
   address	= {San Francisco},
@@ -1110,7 +1110,7 @@
   author	= {Oppenheim, D.},
   title		= {Towards a better software-design for supporting creative
 		  musical activity},
-  booktitle	= proc # " 1991 "  # icmc,
+  booktitle	= {Proceedings of the 1991 International Computer Music Conference},
   pages		= {380--387},
   year		= 1991,
   address	= {San Francisco},
@@ -1137,7 +1137,7 @@
   author	= {Oppenheim, D.V. and Anderson, T. and Kirk, R.},
   title		= {Perceptual parameters: their specification, scoring and
 		  control within two software composition systems},
-  booktitle	= proc # " 1993 "  # icmc,
+  booktitle	= {Proceedings of the 1993 International Computer Music Conference},
   pages		= {421--424},
   year		= 1993,
   address	= {San Francisco},
@@ -1163,7 +1163,7 @@
   author	= {Oppenheim, D.},
   title		= {Demonstrating mmorph: a system for morphing music in
 		  real-time},
-  booktitle	= proc # " 1995 "  # icmc,
+  booktitle	= {Proceedings of the 1995 International Computer Music Conference},
   pages		= {479--480},
   year		= 1995,
   address	= {San Francisco},
@@ -1230,7 +1230,7 @@
 @InProceedings{	  pope89:modeling,
   author	= {Pope, Stephen Travis},
   title		= {Modeling musical structures as event generators},
-  booktitle	= proc # " 1989 "  # icmc,
+  booktitle	= {Proceedings of the 1989 International Computer Music Conference},
   year		= 1989,
   address	= {San Francisco},
   publisher	= cma,
@@ -1255,7 +1255,7 @@
   author	= {Stephen Travis Pope},
   title		= {The SmOKe music representation, description language, and
 		  interchange format},
-  booktitle	= proc # " 1992 "  # icmc,
+  booktitle	= {Proceedings of the 1992 International Computer Music Conference},
   pages		= {},
   year		= 1992,
   address	= {San Francisco},
@@ -1291,7 +1291,7 @@
 @InProceedings{	  pope95:computer,
   author	= {Stephen Travis Pope},
   title		= {Computer music workstations I have known and loved},
-  booktitle	= proc # " 1995 "  # icmc,
+  booktitle	= {Proceedings of the 1995 International Computer Music Conference},
   pages		= {127--133},
   year		= 1995,
   address	= {San Francisco},
@@ -1354,7 +1354,7 @@
 @InProceedings{	  puckette84:m,
   author	= {Puckette, M.},
   title		= {The M orchestra language},
-  booktitle	= proc # " 1984 "  # icmc,
+  booktitle	= {Proceedings of the 1984 International Computer Music Conference},
   pages		= {17--20},
   year		= 1984,
   address	= {San Francisco},
@@ -1366,7 +1366,7 @@
 @InProceedings{	  puckette96:puredata,
   author	= {Puckette, M.},
   title		= {Pure data: another integrated computer music environment},
-  booktitle	= proc # " 1996 "  # icmc,
+  booktitle	= {Proceedings of the 1996 International Computer Music Conference},
   pages		= {269--272},
   year		= 1996,
   address	= {San Francisco},
@@ -1390,7 +1390,7 @@
 @InProceedings{	  puckette98:realtime,
   author	= {Puckette, M. and Apel, T.},
   title		= {Real-time audio analysis tools for Pd and MSP},
-  booktitle	= proc # " 1998 "  # icmc,
+  booktitle	= {Proceedings of the 1998 International Computer Music Conference},
   pages		= {109--112},
   year		= 1998,
   address	= {San Francisco},
@@ -1402,7 +1402,7 @@
 @InProceedings{	  renz98:web,
   author	= {K. Renz and H. H. Hoos},
   title		= {A web-based approach to music notation using GUIDO},
-  booktitle	= proc # " 1998 "  # icmc,
+  booktitle	= {Proceedings of the 1998 International Computer Music Conference},
   pages		= {455--458},
   year		= 1998,
   address	= {San Francisco},
@@ -1436,7 +1436,7 @@
   author	= {Rogers, J. and J. Rockstroh and P. Batstone},
   title		= {Music-time and clock-time similarities under tempo
 		  changes},
-  booktitle	= proc # " 1980 "  # icmc,
+  booktitle	= {Proceedings of the 1980 International Computer Music Conference},
   pages		= {404--442},
   year		= 1980,
   address	= {San Francisco},
@@ -1449,7 +1449,7 @@
   author	= {Rossignol, S. and Desain, P. and and Honing, H.},
   title		= {Refined knowledge-based pitch tracking: comparing three
 		  frequency extraction methods},
-  booktitle	= proc # " 2001 "  # icmc,
+  booktitle	= {Proceedings of the 2001 International Computer Music Conference},
   optpages	= 00,
   year		= 2001,
   address	= {San Francisco},
@@ -1547,7 +1547,7 @@
 @InProceedings{	  smith81:program,
   author	= {Leland Smith},
   title		= {The 'SCORE' program for musical input to computers},
-  booktitle	= proc # " 1980 "  # icmc,
+  booktitle	= {Proceedings of the 1980 International Computer Music Conference},
   pages		= {226--230},
   year		= 1981,
   editor	= {Hubert S. Howe},
@@ -1560,7 +1560,7 @@
 @InProceedings{	  smith91:viewpoints,
   author	= {Smith, J. O.},
   title		= {Viewpoints on the history of digital synthesis},
-  booktitle	= proc # " 1991 "  # icmc,
+  booktitle	= {Proceedings of the 1991 International Computer Music Conference},
   pages		= {1--10},
   year		= 1991,
   address	= {San Francisco},
@@ -1659,7 +1659,7 @@
   author	= {James Wrighta and Daniel V. Oppenheim and David Jameson
 		  Don Pazel and Robert M. Fuhrer},
   title		= {CyberBand: a "hands-on" music composition program},
-  booktitle	= proc # " 1997 "  # icmc,
+  booktitle	= {Proceedings of the 1997 International Computer Music Conference},
   pages		= {383--386},
   year		= 1997,
   address	= {San Francisco},
