--- a/varios.bib
+++ b/varios.bib
@@ -1244,7 +1244,7 @@ Justesse a cappella à la Renaissance},
 @Article{neal00:art,
    author = {Simon Neal}, 
    title = {The Art and Science of Keyboard Temperament}, 
-   journal = {#cmr}, 
+   journal = {Contemporary Music Review}, 
    year = {2000}, 
    annote = {Ilustra temperamentos de modo que eles possam ser usados na prática de teclado contemporânea.}, 
    keyword = {temperamento}, 
@@ -1309,13 +1309,13 @@ Justesse a cappella à la Renaissance},
 @Article{freed00:new,
    author = {Adrian Freed and Rimas Avizienis}, 
    title = {A New Music Keyboard with Continuous Key-Position Sensing and High-Speed Communication}, 
-   booktitle = {#icmc 2000}, 
+   booktitle = { 2000}, 
    year = {2000}, 
    keyword = {temperamento}, 
    keyword = {instrumentos}, 
    pages = {515--518}, 
    address = {San Francisco}, 
-   publisher = {#cma}, 
+   publisher = {The Computer Music Association}, 
   file = {freed00:new},
 }
 
@@ -1334,12 +1334,12 @@ Justesse a cappella à la Renaissance},
 @Article{wright98:implementation,
    author = {Matthew Wright}, 
    title = {Implementation and Performance Issues with OpenSound Control}, 
-   booktitle = {#icmc 1998}, 
+   booktitle = {Proceedings of the 1998 International Computer Music Conference},
    year = {1998}, 
    keyword = {computer music}, 
    pages = {224--227}, 
    address = {San Francisco}, 
-   publisher = {#cma}, 
+   publisher = {The Computer Music Association}, 
   file = {wright98:implementation},
 }
 
@@ -1412,12 +1412,12 @@ Justesse a cappella à la Renaissance},
 @Article{wright97:open,
    author = {Matthew Wright and Adrian Freed}, 
    title = {Open SoundControl: A New Protocol for Communicating with Sound Synthesizers}, 
-   booktitle = {#proc 1997}, 
+   booktitle = {Proceedings of the 1997 International Computer Music Conference}, 
    year = {1997}, 
    keyword = {temperamento}, 
    pages = {101--104}, 
    address = {San Francisco}, 
-   organization = {#cma}, 
+   organization = {The Computer Music Association}, 
   file = {wright97:open},
 }
 
