--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -578,7 +578,7 @@
   author	= {{Marcos da Silva} Sampaio},
   title		= {Em torno da romã: aplicações de operações de
 		  contornos na composição},
-  school	= {Escola de Música da Universidade Federal da Bahia},
+  school	= {Universidade Federal da Bahia},
   year		= 2008,
   address	= {Salvador, BA},
   month		= {November},
