Insere abstract tese marvin

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -313,6 +313,56 @@
 		  perceptual and pedagogical implications},
   school	= {University of Rochester},
   year		= {1988},
+  abstract  = {This dissertation proposes the thesis that abstract
+                  theories of pitch- and set-class structure do not
+                  reflect listeners' aural perception of sounding
+                  music as effectively as theories modelling the
+                  articulation of these underlying structures on the
+                  musical surface. This position is supported by a
+                  review of pertinent music-theoretical and
+                  music-psychological research. Based upon the data
+                  collected by various music-psychologists, published
+                  elsewhere but compared and critiqued here, this
+                  study concludes that listeners generally use figural
+                  cues drawn from musical context --- for example,
+                  melodic shapes, changes of direction, relative
+                  durationnal patterns, and so on --- to retain and
+                  recognize musical ideas in short-term memory. These
+                  figural cues may be represented in precise notation
+                  and compared with one another by application and
+                  generalization of Robert Morris's contour
+                  theories. Morris's comparison matrix and contour
+                  equivalence relations are introduced here, followed
+                  by this author's generalization of the thwory to
+                  duration space and development of similarity
+                  relations for melodic contours of relative pitch
+                  height and rhythmic contours of relative suration
+                  successions. The similarity relations for musical
+                  contours build upon previous wort of Dabid Lewin,
+                  Robert Morris, and John Rahn. While the efficacy of
+                  these theories for modelling perceivable patterns in
+                  musical contexts cannot be proven without further
+                  psychological testing, their applicability to
+                  musical analysis is demonstrated. Analyses drawn
+                  form the music of Bartok, Webern, Berg, and Varèse
+                  illustrate ways in which melodic and rhythmic
+                  contour relationships may be used to shape a formal
+                  scheme to differentiate melody from accompaniment,
+                  to associate musical ideas that belong to different
+                  set classes, and to create unity throuth varied
+                  repetition.  The concluding chapter explores avenues
+                  for future work. A section on music-psychological
+                  experimentation offers a critical overview of
+                  research in this area and proposes ideas for future
+                  experimentation. Second, the implications of
+                  music-psychological research for the pedagogy of
+                  non-tonal music theory are considered and a model
+                  curriculum for non-tonal music theory proposed. The
+                  dissertation concludes by proposing a number of ways
+                  in which contour theory might be generalized to
+                  other domains and illustrates the application of one
+                  such generalization to the analysis of chord spacing
+                  in a piano work of Luigi Dallapiccola.},
   keywords	= {melodic contour}
 }
 
