Insere abstract em huron

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -236,6 +236,25 @@
   pages		= {489--516},
   year		= {1996},
   publisher	= {University of California Press},
+  abstract  = {The theoretical and experimental literatures pertaining
+                  to pitch-related accent are reviewed. From these
+                  literatures, eight competing notions of melodic
+                  accent are identified. All eight conceptions of
+                  melodic accent were investigated through
+                  correlational studies of three contrasting samples
+                  of music. Statistical correlations were calculated
+                  for each accent type with respect to the
+                  corresponding metric position or with respecto to
+                  the syllabic/melismatic status of associated sung
+                  text. The results for all three studies are most
+                  consistent with a perceptual model of melodic accent
+                  developed by Joseph thomassen (1982). The remaining
+                  conceptions of melodic accent receibe little or no
+                  empirical support. In addition, this study reveals
+                  an endemic use of text-melody displacement on a
+                  sample of Gregorian chant---suggesting that the
+                  chant melodies were constructed so as to avoid
+                  strong rhythmic stresses.},
   keywords	= {melodic contour}
 }
 
