Insere abstract para thomassen

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -836,5 +836,36 @@
   volume	= 71,
   number	= 6,
   pages		= {1598--1605},
+  abstract  = {The perception of accent in tone sequences is a
+                  constructive process in which physical cues are
+                  matched against anticipated accents. The
+                  anticipation of the observer can experimentally be
+                  controlled by embedding the short tone sequence to
+                  be investigated in a context with a meter: method of
+                  controlled anticipation. An investigation of melodic
+                  accentuation, resulting from the succession of
+                  frequency intervbals, revealed that in principle
+                  every change of frequency level between two
+                  successive tones can be interpreted as accentuation
+                  of ofpposite directions operates as the strongest
+                  accentuation, whereas two intervals in the same
+                  direction are equally effective. The effect of
+                  relative magnitude is less pronounced. Only in the
+                  case of clearly diverging relative magnitudes the
+                  largest interval is the most powerful, particularly
+                  when the intervals are in the same direction. The
+                  advantage of rises over falls is almost
+                  negligible. The short-term influence of physical
+                  factors on momentary accent perception allows for a
+                  description in terms of a "memory window" sliding
+                  along the tone sequence. At each moment the
+                  frequencies within the window provide the physical
+                  cue for accent that has to be matched agains
+                  anticipation. If the span of the window is minimal,
+                  i.e., three tones, accent perception in sequences of
+                  four tones, embedded according to the method of
+                  controlled anticipation, has been accounted for
+                  fairly well, the correlation coefficient between
+                  predictions and outcomes being 0.76.},
   keywords	= {melodic contour}
 }
