Insere abstract para schultz

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -718,6 +718,29 @@
   volume	= 30,
   number	= 1,
   pages		= {89--137},
+  abstract  = {Taking its cue from several highly suggestive remarks
+                  found in his interviews and two major theoretical
+                  treatises, this article investigates melodic contour
+                  structure in Olivier Messiaen's mature
+                  birdsong. Following some key refinements to Robert
+                  Morris's (1993) Contour-Reduction Algorithm and
+                  prime contour classification system, the algorithm
+                  is applied to various passages from Messeaen's
+                  Réveil des Oiseaux and birdsong transcriptions in
+                  Tome V of his Traité de rythme, de Couleur, et
+                  d'Ornithologie, thereby revealing the existence of
+                  numerous nonretrogradable patterns, barying in both
+                  nature and degree of exactitude, at a deeeper level
+                  of structure. The article then discusses the
+                  specific features that these patterns exhibit, and
+                  explores some of the major issues involved in
+                  carrying out an analysis of this kind. Finally,
+                  evidence is offered in support of the assertion that
+                  these contour symmetries represent a concrete
+                  manifestation of Messiaen's self-admitted tendency
+                  to unintentionally insert his own compositional
+                  voice and artistic sensibilities into his birdsong
+                  transcriptions},
   keywords	= {melodic contour}
 }
 
