Insere artigos escritos durante pesquisa em musicologia (2003-2005)

--- a/musicology.bib
+++ b/musicology.bib
@@ -10,6 +10,129 @@
   keywords	= {musicology}
 }
 
+@Article{robatto.ea03,
+  author =       {Lucas Robatto and Clara Rodrigues and Marcos Sampaio},
+  title =        {Os Primórdios do Teatro São João desta Cidade da Bahia (1806-1821)},
+  journal =      {Revista da Bahia},
+  year =         2003,
+  volume =    32,
+  pages =     {62--67},
+  abstract =   {O "Teatro São João desta Cidade da Bahia" foi o palco
+                  principal da representação dos valores culturais,
+                  estéticos e políticos da elite de uma das cidades
+                  mais ricas das Américas ao início do século XIX. A
+                  documentação recentemente encontrada, relativa aos
+                  primórdios desta instituição (1806-1821), tem
+                  possibilitado o delineamento de diversos aspectos da
+                  vida cultural de então, através do estudo do seu
+                  funcionamento e papel sociocultural.},
+  keywords	= {musicology}
+}
+
+@InProceedings{sampaio04:documentos,
+  author =       {{Marcos da Silva} Sampaio},
+  title =        {Os Documentos do Teatro São João no Arquivo Público
+                  do Estado da Bahia: Catalogando e Gerenciando
+                  Informações},
+  booktitle = {Anais do VI Encontro de Musicologia Histórica},
+  pages =     {432--441},
+  year =      2004,
+  editor =    {Paulo Castagna},
+  address =   {Juiz de Fora, MG},
+  organization = {Promusica},
+  publisher = {Promúsica},
+  abstract	= { O Teatro São João da cidade de Salvador (BA) funcionou
+                  entre 1812 e 1922. Nele circularam, além dos
+                  artistas, todos os estratos da sociedade
+                  baiana. Recentemente foi encontrada, na seção
+                  colonial do Arquivo Público do Estado da Bahia, uma
+                  documentação inédita referente ao período de criação
+                  e estabelecimento do teatro (1806 a 1821). Este
+                  material está distribuído em oito maços de
+                  documentos, em diferentes formatos e tamanhos,
+                  referentes à construção e ao funcionamento
+                  administrativo e artístico do teatro. A grande
+                  quantidade de informações contida nos maços é
+                  bastante fragmentária, dificultando o estudo
+                  sistematizado de tal documentação. O material
+                  encontrado fornece informações referentes a artistas
+                  e apresentações, apesar de não se tratar de
+                  documentação musical (programas de concerto,
+                  partitura). Para tanto foi necessário resolver o
+                  problema da fragmentação das informações, com a
+                  criação de, numa primeira etapa, um sistema de
+                  códigos de localização de informações arquivais, e,
+                  numa segunda etapa, um sistema informatizado de
+                  disponibilização de informações. A partir do
+                  conteúdo dos maços encontrados, desenvolvemos uma
+                  classificação própria que leva em conta o sistema de
+                  organização utilizado pelo Arquivo Público do Estado
+                  da Bahia, além de permitir a inclusão de novos
+                  documentos, originários de outros arquivos ou
+                  instituições. Após esta etapa, iniciamos
+                  desenvolvimento do sistema que, em uma primeira
+                  versão, contempla apenas informações relativas a
+                  artistas. Para seu desenvolvimento levamos em conta
+                  as necessidades de consulta do material e a futura
+                  conexão com outras bases de dados construídas em
+                  pesquisas na área de Musicologia na Bahia, como a
+                  desenvolvida por Pablo Sotuyo Blanco, sobre o
+                  Patrimônio Musical na Bahia e a coordenada por
+                  Manuel Veiga, sobre Impressão Musical na Bahia. Além
+                  de apresentar soluções aos problemas inerentes ao
+                  gerenciamento das informações encontradas, o
+                  presente projeto de pesquisa fornece subsídios para
+                  uma abordagem sociológica do Teatro São
+                  João. Adotando o conceito de figuração, desenvolvido
+                  por Norbert Elias, todas as pessoas envolvidas com o
+                  teatro passam a constituir uma formação social em
+                  que os indivíduos estão ligados entre si por meio de
+                  dependências recíprocas, tendo, neste caso, o teatro
+                  como centro. Tal abordagem transcende as fronteiras
+                  tradicionais da Musicologia Histórica, porém, faz-se
+                  necessária para uma melhor compreensão da Música e
+                  dos músicos durante este período da vida cultural
+                  brasileira.},
+  keywords	= {musicology}
+}
+
+@InProceedings{sampaio04:relacoes,
+  author =       {{Marcos da Silva} Sampaio},
+  title =        {As Relações Trabalhistas entre o Teatro São João e
+                  os seus Artistas, no período de 1812 a 1821},
+  booktitle = {Anais do II Encontro Naciona da ABET},
+  year =      2004,
+  address =   {Salvador, BA},
+  organization = {Universidade Federal da Bahia},
+  publisher = {Universidade Federal da Bahia}
+  abstract = {O Teatro São João da cidade de Salvador, BA, funcionou
+                  entre 1812 e 1922. Ele foi o palco principal da
+                  representação dos valores culturais, estéticos e
+                  políticos da elite baiana, e também foi testemunha
+                  das mudanças que ocorreram nesta sociedade em um
+                  período decisivo para a consolidação do Brasil
+                  enquanto nação independente. Nele circularam, além
+                  dos artistas, todos os estratos da sociedade
+                  baiana. O presente trabalho propõe uma abordagem da
+                  relação profissional existente entre os
+                  artistas---atores e músicos---e o Teatro São João,
+                  enquanto empregador, durante o período colonial. O
+                  trabalho se baseia na análise de documentos de
+                  conteúdo administrativo e contábil referentes ao
+                  teatro, no período de 1806 a 1821, encontrados no
+                  Arquivo Público do Estado da Bahia. Para esta
+                  análise, faz-se uso da Sociologia. Adotando o
+                  conceito de figuração, desenvolvido por Norbert
+                  Elias, todas as pessoas envolvidas com o teatro
+                  passam a constituir uma formação social em que os
+                  indivíduos estão ligados entre si por meio de
+                  dependências recíprocas, tendo, neste caso, o teatro
+                  como centro. Tal abordagem faz-se necessária para
+                  uma melhor compreensão da Música e dos músicos
+                  durante este período da vida cultural brasileira.},
+  keywords = {musicology}
+}
+
 @InProceedings{	  wiering.ea06:digital,
   author	= {Frans Wiering and Tim Crawford and David Lewis},
   title		= {Digital Critical Editions of Music: A Multidimensional
