--- a/musicology.bib
+++ b/musicology.bib
@@ -10,7 +10,7 @@
   keywords	= {musicology}
 }
 
-@Article{robatto.ea03,
+@Article{robatto.ea03:primordios,
   author =       {Lucas Robatto and Clara Rodrigues and Marcos Sampaio},
   title =        {Os Primórdios do Teatro São João desta Cidade da Bahia (1806-1821)},
   journal =      {Revista da Bahia},
