Colocando monografia minha

--- a/genos.bib
+++ b/genos.bib
@@ -49,3 +49,14 @@
   year		= 2008,
   keywords	= {genos}
 }
+
+@Misc{passos08:modelos,
+  key =       {passos08:modelos},
+  author =    {Alexandre Passos},
+  title =     {Modelos de Markov Ocultos para Análise Harmônica
+                  Funcional de Música Tonal},
+  howpublished = {Monografia de Graduação defendida na Universidade
+                  Federal da Bahia},
+  month =     {Dec},
+  year =      2008}
+
