--- a/top-mestrado.bib
+++ b/top-mestrado.bib
@@ -653,3 +653,53 @@
   organization	= {ACM New York, NY, USA},
   keywords	= {top mestrado}
 }
+
+@InProceedings{kumar.ea04:simple,
+  title={{A simple linear time $(1+\epsilon)$-approximation algorithm for k-means clustering in any dimensions}},
+  author={Amit Kumar and Yogish Sabharwal and Sandeep Sen},
+  booktitle={Foundations of Computer Science, 2004. Proceedings. 45th Annual IEEE Symposium on},
+  pages={454--462},
+  year=2004
+}
+
+@article{lecun.ea06:tutorial,
+  title={{A tutorial on energy-based learning}},
+  author={LeCun, Y. and Chopra, S. and Hadsell, R.},
+  journal={To appear in “Predicting Structured Data},
+  volume=1,
+  pages=0,
+  year=2006
+}
+
+@techreport{dasgupta07:hardness,
+  title={{The hardness of k-means clustering}},
+  author={Dasgupta, S.},
+  year= 2007,
+  institution={Technical Report CS2007-0890, University of California, San Diego}
+}
+
+@InProceedings{dagan.ea93:contextual,
+  title={Contextual word similarity and estimation from sparse data},
+  author={Dagan, I. and Marcus, S. and Markovitch, S.},
+  booktitle={Proceedings of the 31st annual meeting on Association for Computational Linguistics},
+  pages={164--171},
+  year=1993,
+  organization={Association for Computational Linguistics Morristown, NJ, USA}
+}
+
+@InProceedings{lin98:automatic,
+  title={{Automatic retrieval and clustering of similar words}},
+  author={Lin, D.},
+  booktitle={Proceedings of the 17th international conference on Computational linguistics-Volume 2},
+  pages={768--774},
+  year=1998,
+  organization={Association for Computational Linguistics Morristown, NJ, USA}
+}
+
+@InProceedings{terra.ea03:frequency,
+  title={{Frequency estimates for statistical word similarity measures}},
+  author={Terra, E. and Clarke, C.L.A.},
+  booktitle={Proceedings of the Human Language Technology and North American Chapter of Association of Computational Linguistics Conference 2003 (HLT/NAACL 2003)},
+  pages={244--251},
+  year=2003
+}
