Insere referências corais e jedit

--- a/music-scores.bib
+++ b/music-scores.bib
@@ -51,3 +51,11 @@
   address	= {Wien},
   keywords	= {music scores}
 }
+
+@Book{sulyok82:johann,
+  author =    {Imre Sulyok},
+  title =        {Johann Sebastian Bach: Four-Part Chorales},
+  publisher =    {Editio Musica},
+  year =         1982,
+  address =   {Budapest}}
+
