--- a/programs.bib
+++ b/programs.bib
@@ -413,3 +413,12 @@
   year		= 2003,
   keywords	= {programs}
 }
+
+@Misc{           ezust08:jedit,
+  author       = {Alan Ezust},
+  title        = {jEdit 4.3 User's Guide},
+  howpublished = {\url{http://www.jedit.org/users-guide/index.html}},
+  year         = 2008,
+  keywords	   = {programs}
+}
+
