Insere artigo straus

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -473,6 +473,32 @@
   keywords	= {music harmony and theory}
 }
 
+@Article{straus03:uniformity,
+  author =       {Joseph N. Straus},
+  title =        {Uniformity, Balance, and Smoothness in Atonal Voice Leading},
+  journal =      {Music Theory Spectrum},
+  year =         2003,
+  volume =    25,
+  number =    2,
+  pages =     {305--352},
+  abstract = {This paper offers a broadly applicable model for atonal
+                  voice leading, a model of pitch-class counterpoint
+                  to connect any two harmonies. Voice leadings are
+                  evaluated by three criteria: (1) uniformity: the
+                  extent to which the voices move by the same interval
+                  distance and thus approach traditional
+                  transposition; (2) balance: the extent to which the
+                  voices move by the same index number and thus
+                  approach traditional inversion; and (3) smoothness:
+                  the extent to which the voices travel the shortest
+                  possible distance. The most uniform, most balanced,
+                  or smoothest way of moving from one set to another
+                  in pitch-class space, or from one set class to
+                  another in a proposed voice-leading space, provides
+                  a standpoint from which to assess any specific
+                  compositional realization in pitch space.}
+}
+
 @Book{		  waesberghe55:textbook,
   author	= {Joseph Smits van Waesberghe},
   title		= {A Textbook of Melody: A Course in Functional Melodic
@@ -512,3 +538,4 @@
   publisher	= {Birkh{\"a}user},
   keywords	= {music harmony and theory}
 }
+
